fixed catalog spacing and working on footer rn

--- a/sanctuary-react/src/assets/styling/_footer.scss
+++ b/sanctuary-react/src/assets/styling/_footer.scss
@@ -1,21 +1,44 @@
 .signUp {
-    position: relative;
-    top: 39px;
-    height: 669px;
-    width: 100%;
+    // position: relative;
+    // top: 39px;
+    // height: 669px;
+    // width: 100%;
+    // height: 560px;
     
-    background: #353234;
-    color: #F6F6F6;
+    // background: #353234;
+    // color: #F6F6F6;
 
+    // display: flex;
+    // justify-content: space-between;
+    // flex-basis: 70%;
+
+    // text-align: center;
+
+    // img {
+    //     height: 100%;
+    // }
+    height: 560px;
+    background: #353234;
     display: flex;
     justify-content: space-between;
-    flex-basis: 70%;
+}
 
-    text-align: center;
+h1 {
+    font-size: 48px;
+    font-weight: 600;
+    color: #F6F6F6;
+}
 
-    img {
-        height: 100%;
-    }
+h3 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #F6F6F6;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 500;
+    color: #F6F6F6;
 }
 
 
@@ -52,9 +75,9 @@
 
 
 .bottomText {
-    position: relative;
-    height: 104px;
-    width: 100%;
+    // position: relative;
+    // height: 104px;
+    // width: 100%;
     background: white;
     display: flex;
     justify-content: space-between;
