--- a/sanctuary-react/src/assets/styling/_modal.scss
+++ b/sanctuary-react/src/assets/styling/_modal.scss
@@ -4,7 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px) brightness(0.7);
+    
 
 
     display: flex;
